# softmatcha2

./: .gitignore  LICENSE  LICENSE-MIT  README.md  pyproject.toml
bench/: bench-en-400-v5.txt  bench-ja-100-v2.txt  bench-zh-100-v1.txt
rust/: Cargo.toml  pyproject.toml
rust/src/: helper.rs  lib.rs
rust/src/index/: main.rs  memmap.rs  mod.rs  phase_1.rs  phase_2.rs  phase_2a.rs  phase_2b.rs  phase_3.rs  phase_3a.rs  phase_3b.rs
rust/src/search/: main.rs  mod.rs  z_bsearch.rs  z_check.rs  z_core.rs  z_enumerate.rs
src/softmatcha/: configs.py  conftest.py  functional.py  registry.py  stopwatch.py  typing.py
src/softmatcha/cli/: build_main.py  exact_main.py  search_main.py
src/softmatcha/embeddings/: __init__.py  base.py  fasttext.py  gensim.py  llama.py  transformers.py
src/softmatcha/index/: __init__.py  build.py  tokenize.py
src/softmatcha/search/: __init__.py  search.py
src/softmatcha/struct/: __init__.py  pattern.py  token_embeddings.py
src/softmatcha/tokenizers/: __init__.py  base.py  fasttext.py  gensim.py  icu.py  llama.py  mecab.py  moses.py  transformers.py
src/softmatcha/utils/: custom_tqdm.py  fasttext.py  gensim.py  io.py  llama.py  makefile.py
