[package]
name = "softmatcha_rs"
version = "0.2.0"
edition = "2021"

[lib]
name = "softmatcha_rs"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.27", features = ["extension-module"] }
bytemuck = { version = "1.15", features = ["extern_crate_alloc"] }
rustix = { version = "1.1", features = ["fs"] }
numpy = "0.27"
rayon = "1.10"
rand = "0.9"
log = "0.4"
env_logger = "0.11"
chrono = "0.4"
libc = "0.2"
indicatif = "0.18"
memmap2 = "0.9"